--- a/day1/index.html
+++ b/day1/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-    <frameset cols="25%,75%">
-        <frame src="a.html" name="f1">
-        <frame src="b.html" name="f2">
 
-    </frameset>
+<body>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores voluptas dolore magnam dignissimos qui, commodi
+        quis quia doloribus earum incidunt. Laudantium magnam, numquam nam alias totam eum non quibusdam dolore.</p>
+</body>
+
 </html>
